[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "3.2.1"
name = "personnummer"
description = "Validate Swedish personal identity numbers"
license = { file = "./LICENSE" }
readme = "README.md"
authors = [
    { name = "Personnummer and Contributors", email = "hello@personnummer.dev" },
]
classifiers = [
	"License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://personnummer.dev"
Repository = "https://github.com/personnummer/python"

[project.entry-points."console_scripts"]
personnummer = "personnummer.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
]

[options]
packages = ["personnummer"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["personnummer/tests*"]

[tool.pytest.ini_options]
testpaths = [
    "personnummer/tests",
]
addopts = "-ra -v"
